# 3884

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  azure-pipelines.yml  config.lua  config.lua.dist  theforgottenserver.s3db  theforgottenserver.s3db.dist
.github/workflows/: build-mac.yml  build-ubuntu.yml  build-vcpkg.yml  coverity.yml  docker-image.yml
cmake/: FindCXX.cmake  FindGMP.cmake  FindLuaJIT.cmake  FindMariaDB.cmake  FindMySQL.cmake  FindODBC.cmake  FindPostgreSQL.cmake  FindPugiXML.cmake  config.lua.dist
data/globalevents/: globalevents.xml
data/globalevents/scripts/: save.lua
data/items/: items.xml  randomization.xml
data/lib/: revscriptsys.lua
data/mods/monster/Custom/: hero hacker.xml
data/monster/Bosses/: koshei the deathless.xml
data/monster/Djinns/: green djinn.xml
data/npc/lib/: npc.lua
data/npc/lib/npcsystem/: npcsystem.lua
data/talkactions/: talkactions.xml
data/talkactions/scripts/: cast.lua  teleporthome.lua
src/: CMakeLists.txt  account.h  actions.cpp  actions.h  admin.cpp  admin.h  allocator.cpp  allocator.h  baseevents.cpp  baseevents.h  beds.cpp  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasemysql.cpp  databasemysql.h  databaseodbc.cpp  databaseodbc.h  databasepgsql.cpp  databasepgsql.h  (+108 more)
vc14/: settings.props  theforgottenserver.vcxproj
